# cmake_minimum_required(VERSION 3.25)
# project(Zombled)

# set(CMAKE_CXX_STANDARD 23)

# add_compile_options(-fsanitize=address -fno-omit-frame-pointer -g)
# add_link_options(-fsanitize=address)

# add_subdirectory(libs/uhcstd)
# add_subdirectory(libs/WishEngine)
# add_subdirectory(client)
# add_subdirectory(server)
